--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,10 @@
         "/home/thatblueboy/robotic_arm_ws/devel/lib/python3/dist-packages",
         "/home/thatblueboy/catkin_ws/devel/lib/python3/dist-packages",
         "/opt/ros/noetic/lib/python3/dist-packages"
+    ],
+    "python.analysis.extraPaths": [
+        "/home/thatblueboy/robotic_arm_ws/devel/lib/python3/dist-packages",
+        "/home/thatblueboy/catkin_ws/devel/lib/python3/dist-packages",
+        "/opt/ros/noetic/lib/python3/dist-packages"
     ]
 }
